syntax = "proto3";
option go_package = "github.com/potix/ylcc/protocol";

// The ylcc service definition.
service ylcc {
	// キャッシュされているvideo情報を返す
	rpc GetVideo (GetVideoRequest) returns (GetVideoResponse) {}
	// 配信中のライブチャットの収集を開始する
	// 収集したメッセージはキャッシュされる
	rpc StartCollectionActiveLiveChat (StartCollectionActiveLiveChatRequest) returns (StartCollectionActiveLiveChatResponse) {}
	// 収集中のライブチャットのメッセージをリアルタイムに返す
	rpc PollActiveLiveChat (PollActiveLiveChatRequest) returns (stream PollActiveLiveChatResponse) {}
	// 収集後キャッシュしたライブチャットのメッセージを返す
	// 収集中はエラーを返す
	rpc GetCachedActiveLiveChat (GetCachedActiveLiveChatRequest) returns (GetCachedActiveLiveChatResponse) {}
	// アーカイブのライブチャットの収集を開始する
	rpc StartCollectionArchiveLiveChat (StartCollectionArchiveLiveChatRequest) returns (StartCollectionArchiveLiveChatResponse) {}
	// アーカイブのライブチャットのメッセージを返す
	// 収集中はエラーを返す
	rpc GetArchiveLiveChat (GetArchiveLiveChatRequest) returns (GetArchiveLiveChatResponse) {}
}

enum Code {
	SUCCESS = 0;
	NOT_FOUND = 1;
	NOT_PERMITTED = 2;
	IN_PROGRESS = 3;
	INTERNAL_ERROR = 4;
}

message Status {
	Code code = 1;
	string message = 2;
}

message GetVideoRequest {
	 string videoId = 1;
}

message GetVideoResponse {
	Status status = 1;
        Video video = 2;
}

message StartCollectionActiveLiveChatRequest {
	string videoId = 1;
}

message StartCollectionActiveLiveChatResponse {
	Status status = 1;
	Video video = 2;
}

message PollActiveLiveChatRequest {
	string videoId = 1;
}

message PollActiveLiveChatResponse {
	Status status = 1;
	repeated ActiveLiveChatMessage activeLiveChatMessages = 3;
}

message GetCachedActiveLiveChatRequest {
	string videoId = 1;
	string pageToken = 2;
}

message GetCachedActiveLiveChatResponse {
	Status status = 1;
	string nextPageToken = 2;
	repeated ActiveLiveChatMessage activeLiveChatMessages = 3;
}

message StartCollectionArchiveLiveChatRequest {
	string videoId = 1;
}

message StartCollectionArchiveLiveChatResponse {
	Status status = 1;
	Video video = 2;
}

message GetArchiveLiveChatRequest {
	string videoId = 1;
	string pageToken = 2;
}

message GetArchiveLiveChatResponse {
	Status status = 1;
	string nextPageToken = 2;
	repeated ArchiveLiveChatMessage ArchiveLiveChatMessages = 3;
}

message Video {
	string videoId = 1;
	string channelId = 2;
	string categoryId = 3; 
	string title = 4;  
	string description = 5;
	string publishedAt = 6;
	string duration = 7;
	string activeLiveChatId = 8;
        string actualStartTime = 9;
        string actualEndTime = 10;
        string scheduledStartTime = 11;
        string scheduledEndTime = 12; 
        string privacyStatus = 13;
	string uploadStatus = 14;
	string embeddable = 15;
}

message ActiveLiveChatMessage {
	string messageId = 1;
        string channelId = 2;
        string videoId = 3;
	string apiEtag = 4;
	string authorChannelId = 5;
	string authorChannelUrl = 6;
	string authorDisplayName = 7;
	string authorIsChatModerator = 8;
	string authorIsChatOwner = 9;
	string authorIsChatSponsor = 10;
	string authorIsVerified = 11;
	string liveChatId = 12;
	string displayMessage = 13;
	string publishedAt = 14;
	bool isSuperChat = 15;
	string amountDisplayString = 16;
	string currency = 17;
}

message ArchiveLiveChatMessage {
        string messageId = 1;
        string channelId = 2;
        string videoId = 3;
        string timestampUsec = 4;
        string clientId  = 5;
        string authorName = 6;
        string messageText = 7;
        string purchaseAmountText = 8;
        string videoOffsetTimeMsec = 9;
}





